# tool-permission-gate-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tool_permission_gate/: __init__.py
tests/: test_core.py
