[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "tool-permission-gate-py"
version = "0.1.0"
description = "Policy-check agent tool calls before execution. Python port of @mukundakatta/tool-permission-gate."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = ["llm","tool-calls","policy","gate","agent","security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/tool-permission-gate-py"
Issues = "https://github.com/MukundaKatta/tool-permission-gate-py/issues"
Source = "https://github.com/MukundaKatta/tool-permission-gate-py"
"JS sibling" = "https://www.npmjs.com/package/@mukundakatta/tool-permission-gate"

[tool.hatch.build.targets.wheel]
packages = ["src/tool_permission_gate"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
